# flake8-opencontracting

./: .pre-commit-config.yaml  MANIFEST.in  README.rst  flake8_opencontracting.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  lint.yml
docs/: conf.py  index.rst
tests/: test_module.py
tests/fixtures/: noqa.py
